Refactored/deleted unnecessary classes

--- a/app/src/main/res/layout/fragment_breed_list.xml
+++ b/app/src/main/res/layout/fragment_breed_list.xml
@@ -9,7 +9,7 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context="com.schulz.erica.dogbreeds.BreedFragment"
+    tools:context="com.schulz.erica.dogbreeds.MainActivity"
     tools:listitem="@layout/fragment_breed" />
 
 
