--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,9 @@
         android:layout_height="553dp"
         tools:layout_editor_absoluteY="14dp" />
 
+    <include
+        layout="@layout/fragment_card" />
+
 
 
 
