--- a/app/src/main/res/layout/fragment_card.xml
+++ b/app/src/main/res/layout/fragment_card.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content"
     android:padding="10dp">
+
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_marginTop="45dp"
@@ -23,8 +25,7 @@
                 android:id="@+id/breed_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimaryDark"
-                android:text="Breed Name" />
+                android:textColor="@color/colorPrimaryDark" />
 
             <ImageView
                 android:id="@+id/photo1"
@@ -32,7 +33,6 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/breed_name"
-                android:background="@drawable/ic_launcher_background"
                 android:padding="50dp" />
 
             <ImageView
