--- a/app/src/main/res/layout/fragment_card.xml
+++ b/app/src/main/res/layout/fragment_card.xml
@@ -33,6 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/breed_name"
+                android:background="@drawable/ic_launcher_background"
                 android:padding="50dp" />
 
             <ImageView
