--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.schulz.erica.dogbreeds.MainActivity">
 
+
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
@@ -19,25 +20,28 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+        <Button
+            android:id="@+id/see_breeds"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/see_breeds"
+            app:layout_anchor="@+id/include"
+            app:layout_anchorGravity="top|center"
+            tools:layout_editor_absoluteY="21dp" />
+
     </android.support.design.widget.AppBarLayout>
 
-    <!--<android.support.v7.widget.RecyclerView-->
-        <!--android:id="@+id/recycler_view"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_below="@id/app_bar">-->
 
-    <!--</android.support.v7.widget.RecyclerView>-->
 
 
     <include
+        android:id="@+id/include"
         layout="@layout/content_main"
         android:layout_width="match_parent"
-        android:layout_height="553dp"
-        tools:layout_editor_absoluteY="14dp" />
-
-
-
+        android:layout_height="566dp"
+        tools:layout_editor_absoluteX="30dp"
+        tools:layout_editor_absoluteY="40dp" />
 
 
 </android.support.design.widget.CoordinatorLayout>
