--- a/app/src/main/res/layout/activity_breed_list.xml
+++ b/app/src/main/res/layout/activity_breed_list.xml
@@ -18,13 +18,20 @@
         app:layout_constraintTop_toBottomOf="parent"
         tools:ignore="MissingConstraints" />
 
-
     <ListView
-        android:id="@+id/list"
+        android:id="@+id/image_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
     </ListView>
+
+
+    <!--<ListView-->
+        <!--android:id="@+id/list"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content">-->
+
+    <!--</ListView>-->
 
 
 
