Recyclerview & cardview set up

--- a/app/src/main/res/layout/activity_breed_list.xml
+++ b/app/src/main/res/layout/activity_breed_list.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraint_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -18,12 +19,28 @@
         app:layout_constraintTop_toBottomOf="parent"
         tools:ignore="MissingConstraints" />
 
-    <ListView
-        android:id="@+id/image_list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/breed_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    </ListView>
+    </android.support.v7.widget.RecyclerView>
+
+    <include
+        android:id="@+id/include"
+        layout="@layout/fragment_photo"
+        android:layout_width="259dp"
+        android:layout_height="100dp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="125dp"
+        tools:layout_editor_absoluteY="228dp" />
+
+    <!--<ListView-->
+        <!--android:id="@+id/image_list"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content">-->
+
+    <!--</ListView>-->
 
 
     <!--<ListView-->
