--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,13 +45,16 @@
 
 
 
-    <include
-        android:id="@+id/include"
-        layout="@layout/content_main"
-        android:layout_width="match_parent"
-        android:layout_height="566dp"
-        tools:layout_editor_absoluteX="30dp"
-        tools:layout_editor_absoluteY="40dp" />
+
+
+
+    <!--<include-->
+        <!--android:id="@+id/include"-->
+        <!--layout="@layout/content_main"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="566dp"-->
+        <!--tools:layout_editor_absoluteX="30dp"-->
+        <!--tools:layout_editor_absoluteY="40dp" />-->
 
 
 </android.support.design.widget.CoordinatorLayout>
