--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -7,7 +7,7 @@
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/card_view"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="100dp"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -19,7 +19,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:padding="16dp">
 
             <TextView
@@ -46,6 +46,7 @@
                 android:layout_toEndOf="@+id/photo1"
                 android:background="@drawable/ic_launcher_background"
                 android:padding="50dp" />
+
             <ImageView
                 android:id="@+id/photo3"
                 android:layout_width="wrap_content"
@@ -54,7 +55,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_toEndOf="@+id/photo2"
                 android:background="@drawable/ic_launcher_background"
-                android:padding="50dp" />
+                android:padding="40dp" />
 
 
         </RelativeLayout>
