--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -5,17 +5,18 @@
     android:padding="10dp">
 
 
-    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/card_view"
-        android:layout_marginTop="100dp"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="4dp"
-        app:cardUseCompatPadding="true"
-        app:cardBackgroundColor="#E1F5FE"
-        android:elevation="1dp">
+    <!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
+        <!--android:id="@+id/card_view"-->
+        <!--android:layout_marginTop="100dp"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="150dp"-->
+        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+        <!--app:cardCornerRadius="10dp"-->
+        <!--app:cardElevation="4dp"-->
+        <!--app:cardUseCompatPadding="true"-->
+        <!--android:elevation="1dp">-->
+        <!--app:cardBackgroundColor="#E1F5FE"-->
+
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -24,24 +25,20 @@
 
             <TextView
                 android:id="@+id/breed_name"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="26dp"
+                android:textSize="20dp"
                 android:layout_marginTop="1dp"
                 android:textColor="@android:color/black"/>
 
             <ImageView
                 android:id="@+id/photo1"
-                android:adjustViewBounds="true"
-                android:scaleType="fitCenter"
-                android:layout_marginLeft="14dp"
-                android:layout_gravity="center"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
+                android:layout_marginStart="1dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/breed_name"
-                android:padding="50dp"
-                android:background="@android:color/holo_red_dark"/>
+                android:padding="2dp"/>
 
 
             <ImageView
@@ -49,25 +46,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/breed_name"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="2dp"
                 android:layout_toEndOf="@+id/photo1"
-                android:background="@android:color/holo_blue_bright"
-                android:padding="50dp" />
+                android:padding="2dp" />
 
             <ImageView
                 android:id="@+id/photo3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/breed_name"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="2dp"
                 android:layout_toEndOf="@+id/photo2"
-                android:background="@android:color/holo_green_dark"
-                android:padding="50dp" />
+                android:padding="2dp" />
 
 
         </RelativeLayout>
 
-    </android.support.v7.widget.CardView>
+    <!--</android.support.v7.widget.CardView>-->
 
 </LinearLayout>
 
