--- a/app/src/main/res/layout/activity_breed_list.xml
+++ b/app/src/main/res/layout/activity_breed_list.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraint_layout"
     android:layout_width="match_parent"
+    android:background="@color/app_background"
     android:layout_height="match_parent">
 
     <Button
