--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#5c1004</color>
     <color name="colorAccent">#ea6133</color>
     <color name="app_background">#b6897b</color>
+    <color name="text_color">#FF5C1004</color>
 </resources>
