--- a/app/src/main/res/layout/activity_breed_detail.xml
+++ b/app/src/main/res/layout/activity_breed_detail.xml
@@ -7,4 +7,26 @@
     android:background="@color/app_background"
     tools:context="com.schulz.erica.dogbreeds.BreedDetailActivity">
 
+    <Button
+        android:id="@+id/back_button_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="140dp"
+        android:text="Back to Breed List"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/detail_list_proof" />
+
+    <TextView
+        android:id="@+id/detail_list_proof"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="This is the Breed List Detail Activity!"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="82dp"
+        tools:layout_editor_absoluteY="16dp" />
 </android.support.constraint.ConstraintLayout>
