--- a/app/src/main/res/layout/activity_breed_detail.xml
+++ b/app/src/main/res/layout/activity_breed_detail.xml
@@ -7,6 +7,38 @@
     android:background="@color/app_background"
     tools:context="com.schulz.erica.dogbreeds.BreedDetailActivity">
 
+
+    <!--<Button-->
+    <!--android:id="@+id/home"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginEnd="8dp"-->
+    <!--android:layout_marginStart="8dp"-->
+    <!--android:text="@string/back_home"-->
+    <!--app:layout_constraintEnd_toStartOf="@+id/back_button_2"-->
+    <!--app:layout_constraintHorizontal_bias="0.129"-->
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:layout_constraintTop_toTopOf="parent" />-->
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/breed_detail_recycler_view"
+        android:layout_width="388dp"
+        android:layout_height="456dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="-4dp">
+
+    </android.support.v7.widget.RecyclerView>
+    <include
+        android:id="@+id/include"
+        layout="@layout/fragment_photo_detail"
+        android:layout_width="259dp"
+        android:layout_height="100dp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="125dp"
+        tools:layout_editor_absoluteY="228dp" />
+
     <Button
         android:id="@+id/back_button_2"
         android:layout_width="wrap_content"
@@ -14,20 +46,6 @@
         android:text="@string/back_breed_list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-
-    <Button
-        android:id="@+id/home"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:text="@string/back_home"
-        app:layout_constraintEnd_toStartOf="@+id/back_button_2"
-        app:layout_constraintHorizontal_bias="0.129"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
 
 
 </android.support.constraint.ConstraintLayout>
