--- a/app/src/main/res/layout/activity_breed_detail.xml
+++ b/app/src/main/res/layout/activity_breed_detail.xml
@@ -8,17 +8,6 @@
     tools:context="com.schulz.erica.dogbreeds.BreedDetailActivity">
 
 
-    <!--<Button-->
-    <!--android:id="@+id/home"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginEnd="8dp"-->
-    <!--android:layout_marginStart="8dp"-->
-    <!--android:text="@string/back_home"-->
-    <!--app:layout_constraintEnd_toStartOf="@+id/back_button_2"-->
-    <!--app:layout_constraintHorizontal_bias="0.129"-->
-    <!--app:layout_constraintStart_toStartOf="parent"-->
-    <!--app:layout_constraintTop_toTopOf="parent" />-->
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/breed_detail_recycler_view"
@@ -41,6 +30,7 @@
 
     <Button
         android:id="@+id/back_button_2"
+        android:background="@color/app_background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/back_breed_list"
