--- a/app/src/main/res/layout/activity_breed_detail.xml
+++ b/app/src/main/res/layout/activity_breed_detail.xml
@@ -2,38 +2,43 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraint_detail_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/app_background"
     tools:context="com.schulz.erica.dogbreeds.BreedDetailActivity">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/breed_detail_recycler_view"
-        android:layout_width="388dp"
-        android:layout_height="456dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="-4dp">
-
-    </android.support.v7.widget.RecyclerView>
-    <include
-        android:id="@+id/include"
-        layout="@layout/fragment_photo_detail"
-        android:layout_width="259dp"
-        android:layout_height="100dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="125dp"
-        tools:layout_editor_absoluteY="228dp" />
 
     <Button
         android:id="@+id/back_button_2"
-        android:background="@color/app_background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/app_background"
         android:text="@string/back_breed_list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <include
+        android:id="@+id/include"
+        tools:ignore="MissingConstraints"
+        layout="@layout/fragment_photo_detail"
+        android:layout_width="259dp"
+        android:layout_height="100dp"
+        tools:layout_editor_absoluteX="63dp"
+        tools:layout_editor_absoluteY="205dp" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/breed_detail_recycler_view"
+        android:layout_width="407dp"
+        android:layout_height="622dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/include"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.196"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="0dp">
+
+    </android.support.v7.widget.RecyclerView>
 
 
 </android.support.constraint.ConstraintLayout>
