--- a/app/src/main/res/layout/fragment_photo_detail.xml
+++ b/app/src/main/res/layout/fragment_photo_detail.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linear_detail_layout"
+    android:id="@+id/linear_detail"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp">
@@ -43,8 +43,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="1dp"
         android:textColor="@color/text_color"
-        android:textSize="36sp"
-         />
+        android:textSize="36sp" />
 
 
 </LinearLayout>
