--- a/app/src/main/res/layout/activity_breed_detail.xml
+++ b/app/src/main/res/layout/activity_breed_detail.xml
@@ -18,27 +18,48 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <include
-        android:id="@+id/include"
-        tools:ignore="MissingConstraints"
-        layout="@layout/fragment_photo_detail"
-        android:layout_width="259dp"
-        android:layout_height="100dp"
-        tools:layout_editor_absoluteX="63dp"
-        tools:layout_editor_absoluteY="205dp" />
+    <TextView
+        android:id="@+id/breed_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:textColor="@color/text_color"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toStartOf="@+id/back_button_2"
+        app:layout_constraintHorizontal_bias="0.195"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/breed_detail_recycler_view"
-        android:layout_width="407dp"
-        android:layout_height="622dp"
+    <ImageView
+
+        android:id="@+id/photo_detail_1"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/include"
+        android:padding="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.125"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.196"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp">
+        app:layout_constraintVertical_bias="0.778" />
 
-    </android.support.v7.widget.RecyclerView>
+
+    <!--<android.support.v7.widget.RecyclerView-->
+        <!--android:id="@+id/breed_detail_recycler_view"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_marginTop="24dp"-->
+        <!--app:layout_constraintTop_toTopOf="parent"-->
+        <!--tools:ignore="MissingConstraints"-->
+        <!--tools:layout_editor_absoluteX="0dp">-->
+
+    <!--</android.support.v7.widget.RecyclerView>-->
 
 
 </android.support.constraint.ConstraintLayout>
