--- a/app/src/main/res/layout/fragment_photo_detail.xml
+++ b/app/src/main/res/layout/fragment_photo_detail.xml
@@ -7,47 +7,39 @@
     android:padding="10dp">
 
 
-    <ImageView
 
-        android:id="@+id/photo_detail_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:background="@color/colorAccent"
-        android:padding="2dp" />
+    <!--<ImageView-->
 
-
-    <ImageView
-
-        android:id="@+id/photo_detail_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:background="@color/colorAccent"
-        android:padding="2dp" />
+        <!--android:id="@+id/photo_detail_1"-->
+        <!--android:layout_width="100dp"-->
+        <!--android:layout_height="100dp"-->
+        <!--android:layout_marginStart="5dp"-->
+        <!--android:layout_marginTop="30dp"-->
+        <!--android:padding="2dp" />-->
 
 
-    <ImageView
 
-        android:id="@+id/photo_detail_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:background="@color/colorAccent"
-        android:padding="2dp" />
 
-    <TextView
-        android:id="@+id/breed_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="1dp"
-        android:textColor="@color/text_color"
-        android:textSize="36sp" />
-    <TextView
-        android:id="@+id/test"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
+    <!--<ImageView-->
+
+        <!--android:id="@+id/photo_detail_2"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginStart="2dp"-->
+        <!--android:padding="2dp" />-->
+
+
+    <!--<ImageView-->
+
+        <!--android:id="@+id/photo_detail_3"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginStart="2dp"-->
+        <!--android:padding="2dp" />-->
+
+
+
 
 
 </LinearLayout>
